--- a/src/package.json
+++ b/src/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "socket-chat-example",
+  "name": "Radio Studio Monitor",
   "version": "0.0.1",
-  "description": "my first socket.io app",
+  "description": "Radio Studio Monitor using socket io",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "socket.io": "^4.5.1"
   }
