--- a/compose.yml
+++ b/compose.yml
@@ -10,9 +10,9 @@ services:
     labels:
       - traefik.enable=true
       - traefik.http.routers.docker-radio-display-http.entrypoints=web
-      - traefik.http.routers.docker-radio-display-http.rule=Host(`display.papa.party`)
+      - traefik.http.routers.docker-radio-display-http.rule=Host(``)
       - traefik.http.routers.docker-radio-display-https.entrypoints=websecure
-      - traefik.http.routers.docker-radio-display-https.rule=Host(`display.papa.party`)
+      - traefik.http.routers.docker-radio-display-https.rule=Host(``)
       - traefik.http.routers.docker-radio-display-https.tls=true
       - traefik.http.routers.docker-radio-display-https.tls.certresolver=cloudflare
       - "com.centurylinklabs.watchtower.enable=true"
