--- a/dev-compose.yml
+++ b/dev-compose.yml
@@ -7,6 +7,7 @@ services:
     container_name: docker-radio-display
     environment:
       - PORT=3000
+      - APPKEY=yourappkey
     ports:
       - "3000:${PORT:-3000}"
     # labels:
@@ -22,4 +23,4 @@ services:
       - .:/app
       - /app/src/node_modules
     working_dir: /app/src
-    command: npm run dev
+    command: ["sh", "-c", "npm update && npm install && npm run dev"]
