--- a/dev-compose.yml
+++ b/dev-compose.yml
@@ -8,6 +8,8 @@ services:
     environment:
       - PORT=3000
       - APPKEY=yourappkey
+      - SWAGGER_USER=swagger
+      - SWAGGER_PASSWORD=swagger
     ports:
       - "3000:${PORT:-3000}"
     # labels:
