Add EJS templating and dynamic panel display options TESTING
Migrated the main HTML to EJS templating for dynamic rendering of right panel sections (microphone, automation, EOF) based on environment variables. Updated Docker and compose files to support new environment variables for panel display. Refactored Express app to use EJS, adjusted static and view paths, and improved code style. Updated .gitignore to include .env. Enhanced CSS for layout flexibility.

--- a/compose.yml
+++ b/compose.yml
@@ -11,6 +11,11 @@ services:
       - APPKEY=yourappkey
       - SWAGGER_USER=swagger
       - SWAGGER_PASSWORD=swagger
+      - NODE_ENV=production
+      # Right panel settings, if not set. Defaults to true.
+      - DISPLAY_MICROPHONE=false
+      - DISPLAY_AUTOMATION=true
+      - DISPLAY_EOF=false
     labels:
       - traefik.enable=true
       - traefik.http.routers.docker-radio-display-http.entrypoints=web
