--- a/dev-compose.yml
+++ b/dev-compose.yml
@@ -5,12 +5,13 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: docker-radio-display
+    user: "0:0"
     environment:
       - PORT=3000
       - APPKEY=yourappkey
       - SWAGGER_USER=swagger
       - SWAGGER_PASSWORD=swagger
-      - NODE_ENV=production
+      - NODE_ENV=development
       # Right panel settings, if not set. Defaults to true.
       - DISPLAY_MICROPHONE=false
       - DISPLAY_AUTOMATION=true
@@ -26,8 +27,7 @@ services:
     #  - traefik.http.routers.docker-radio-display-https.tls=true
     #  - traefik.http.routers.docker-radio-display-https.tls.certresolver=cloudflare
     #  - "com.centurylinklabs.watchtower.enable=true"
-    #volumes:
-      #- .:/app
-      #- /app/src/node_modules
-    #working_dir: /app/src
-    #command: ["sh", "-c", "npm ci && npm run dev"]
+    volumes:
+      - ./src:/app
+    working_dir: /app
+    command: ["sh", "-c", "npm install && npm run dev"]
